--- a/mobile/app.json
+++ b/mobile/app.json
@@ -80,7 +80,8 @@
           }
         }
       ],
-      "expo-localization"
+      "expo-localization",
+      "@react-native-community/datetimepicker"
     ],
     "experiments": {
       "typedRoutes": true
