--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "@clerk/clerk-expo": "^2.2.0",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "^11.4.0",
     "@tanstack/react-query": "^5.90.10",
     "convex": "^1.31.2",
@@ -35,19 +36,23 @@
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
-    "expo-location": "~19.0.8",
+    "expo-location": "^19.0.8",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-web-browser": "~15.0.10",
+    "i18n-js": "^4.5.1",
     "posthog-react-native": "^4.17.3",
     "posthog-react-native-session-replay": "^1.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.5",
+    "react-native-maps": "^1.26.20",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
