--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-s3": "^3.965.0",
     "@aws-sdk/s3-request-presigner": "^3.965.0",
     "@convex-dev/eslint-plugin": "^1.0.0",
+    "@convex-dev/rate-limiter": "^0.3.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
