Fix missing expo-router dependency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,10 @@
   ],
   "exclude": [
     "node_modules",
+    "mobile",
+    "**/__tests__/**",
+    "**/*.test.ts",
+    "**/*.test.tsx",
     "**/*-old.ts",
     "**/*-old.tsx"
   ]
