--- a/mobile/app.json
+++ b/mobile/app.json
@@ -81,7 +81,8 @@
         }
       ],
       "expo-localization",
-      "@react-native-community/datetimepicker"
+      "@react-native-community/datetimepicker",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
