--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,14 +17,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.2.0",
+    "@clerk/clerk-expo": "2.19.22",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-community/netinfo": "^11.4.0",
-    "@tanstack/react-query": "^5.90.10",
-    "convex": "^1.31.2",
-    "expo": "~54.0.0",
+    "@react-native-community/netinfo": "11.4.1",
+    "@tanstack/react-query": "5.90.21",
+    "convex": "1.31.7",
+    "expo": "~54.0.33",
     "expo-application": "~7.0.8",
     "expo-auth-session": "~7.0.10",
     "expo-background-fetch": "~14.0.9",
@@ -36,33 +36,34 @@
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
     "expo-localization": "~17.0.8",
     "expo-location": "^19.0.8",
     "expo-notifications": "^0.32.16",
-    "expo-router": "~6.0.21",
+    "expo-router": "~6.0.23",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
     "expo-web-browser": "~15.0.10",
-    "i18n-js": "^4.5.1",
-    "posthog-react-native": "^4.17.3",
-    "posthog-react-native-session-replay": "^1.2.3",
+    "i18n-js": "4.5.2",
+    "posthog-react-native": "4.34.0",
+    "posthog-react-native-session-replay": "1.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-maps": "^1.26.20",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.0",
-    "@types/react": "^19.1.10",
+    "@babel/core": "^7.29.0",
+    "@types/react": "~19.1.10",
     "@types/uuid": "^10.0.0",
     "typescript": "~5.3.0"
   },
