--- a/mobile/ios/OtoqaDriver/Supporting/Expo.plist
+++ b/mobile/ios/OtoqaDriver/Supporting/Expo.plist
@@ -5,8 +5,12 @@
     <key>EXUpdatesCheckOnLaunch</key>
     <string>ALWAYS</string>
     <key>EXUpdatesEnabled</key>
-    <false/>
+    <true/>
     <key>EXUpdatesLaunchWaitMs</key>
-    <integer>0</integer>
+    <integer>3000</integer>
+    <key>EXUpdatesURL</key>
+    <string>https://u.expo.dev/6449e793-4e00-49e3-be2f-586c9ffc4dd2</string>
+    <key>EXUpdatesRuntimeVersion</key>
+    <string>1.0.0</string>
   </dict>
 </plist>
