--- a/mobile/package.json
+++ b/mobile/package.json
@@ -47,6 +47,7 @@
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-task-manager": "~14.0.9",
+    "expo-updates": "~29.0.16",
     "expo-web-browser": "~15.0.10",
     "i18n-js": "4.5.2",
     "posthog-react-native": "4.34.0",
