--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
+    "openai": "^6.22.0",
+    "pdfjs-dist": "^5.4.624",
     "qrcode.react": "^4.2.0",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
