Add password update fields

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -35,7 +35,8 @@
         "UIBackgroundModes": [
           "location",
           "fetch"
-        ]
+        ],
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
