--- a/.env.local.example
+++ b/.env.local.example
@@ -13,3 +13,8 @@ FOURKITES_API_KEY=your-api-key-here
 # Required APIs: Places API, Distance Matrix API, Geocoding API
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# PostHog Analytics
+# Get your API key from: https://us.posthog.com/settings/project-api-key
+NEXT_PUBLIC_POSTHOG_KEY=phc_PZ3GNbNMNfasjq93uuEzrw9vQABLHfe4OFxm4H7Sg6X
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
