--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next-themes": "^0.4.6",
     "openai": "^6.22.0",
     "pdfjs-dist": "^5.4.624",
+    "posthog-js": "^1.352.0",
     "qrcode.react": "^4.2.0",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
